# trajectory_generator

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/trajectory_generator/: cartesian_sinusoidal_trajectory.hpp  helper_functions.hpp  joint_sinusoidal_trajectory.hpp
src/: cartesian_sinusoidal_trajectory_node.cpp  joint_sinusoidal_trajectory_node.cpp
