<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_generator</name>
  <version>0.0.0</version>
  <description>Trajectory generators: joint and Cartesian space.</description>
  <maintainer email="lukasz.wolinski@pw.edu.pl">Lukasz Wolinski</maintainer>
  <license>BSD-3-Clause</license>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>trajectory_msgs</depend>
  <depend>rrlib_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
